# dt-sim

./: .gitignore  CHANGELOG.md  README.md  choreography.cabal
app/: DTreeData.hs  Experiment.hs  HsSemantics.hs  PySemantics.hs  RandomCho.hs  Search.hs
circuits/: adder_1.txt  adder_10.txt  adder_11.txt  adder_12.txt  adder_13.txt  adder_14.txt  adder_15.txt  adder_16.txt  adder_17.txt  adder_18.txt  adder_19.txt  adder_2.txt  adder_20.txt  adder_21.txt  adder_22.txt  adder_23.txt  adder_24.txt  adder_25.txt  adder_26.txt  adder_27.txt  adder_28.txt  adder_29.txt  adder_3.txt  adder_30.txt  adder_31.txt  adder_32.txt  adder_4.txt  adder_5.txt  adder_6.txt  adder_7.txt  adder_8.txt  adder_9.txt  beaver_triple_gen_10.txt  beaver_triple_gen_11.txt  beaver_triple_gen_12.txt  beaver_triple_gen_13.txt  beaver_triple_gen_14.txt  beaver_triple_gen_15.txt  beaver_triple_gen_16.txt  beaver_triple_gen_17.txt  (+59 more)
dtrap/: .gitignore  compile.bash  full_figures.tex  insecure.cho  lt_secure.cho  lt_secure.csv  main.tex  refs.bib  vac_protocol.cho  vac_secure.cho
euroSNP/: main.aux  main.bbl  main.blg  main.out  refs.bib
examples/: 1of4OT.cho  2partyBeaver.cho  3party2andGMW.cho  3partyBeaver.cho  3partyXOR.cho  GMW_macros.cho  GMW_macros_errors.cho  GMW_macros_errors_general.cho  adder_32.cho  adder_8.cho  miniFunc.cho
paper/: main.tex
python/: P-value Analysis.ipynb  adder_generator.py  adder_generator_alt.py  bristol_adder_generator.py  bristol_beaver_generator.py  bristol_lt_generator.py  build_sankey.ipynb  circuit_experiment.py  d-tree-csv.py  d-tree-t-test.py  data_recovery.ipynb  dt_test.py  p_val_cliff_experiment.py  pval-distributions.ipynb  runtime_experiment.py  validate_cho_adders.py
python/cho_builder/: __init__.py  __main__.py  beaver.py  circuit_generator.py  core.py  gmw.py
results/: box3d.ipynb  circuit_results_05-10-2023_21_37_33.csv  circuit_results_17-10-2023_11:40:07.csv  circuit_results_19-10-2023_21:23:19.csv  circuit_results_20-10-2023_13:01:58.csv  circuit_results_24-10-2023_16:38:03.csv  circuit_results_26-10-2023_16:28:06.csv  circuit_results_27-10-2023_09:39:09.csv  circuit_results_27-10-2023_09:44:34.csv  circuit_results_27-10-2023_09:59:43.csv  circuit_results_27-10-2023_10:16:19.csv  circuit_results_27-10-2023_10:42:08.csv  circuit_results_30-10-2023_11:50:52.csv  cliff_results_135_02-08-2023_01:29:44.csv  cliff_results_a129_27-07-2023_11:36:31.csv  cliff_results_a211_28-07-2023_16:36:57.csv  cliff_results_a214_02-08-2023_01:46:14.csv  cliff_results_a220_29-07-2023_09:27:19.csv  cliff_results_a234_02-08-2023_06:23:18.csv  cliff_results_a284_30-07-2023_12:39:59.csv  cliff_results_a299_02-08-2023_12:05:11.csv  cliff_results_a306_31-07-2023_20:37:35.csv  cliff_results_a359_02-08-2023_16:26:54.csv  cliff_results_a364_01-08-2023_01:16:24.csv  cliff_results_a36_02-08-2023_21:00:20.csv  cliff_results_a399_01-08-2023_05:41:25.csv  cliff_results_a454_03-08-2023_02:11:00.csv  cliff_results_a466_01-08-2023_10:25:44.csv  cliff_results_a488_03-08-2023_07:01:37.csv  cliff_results_a504_01-08-2023_15:43:05.csv  cliff_results_a512_03-08-2023_11:43:20.csv  cliff_results_a562_01-08-2023_20:39:23.csv  cliff_results_a94_03-08-2023_16:44:27.csv  miniFunc.csv  secure_timing.csv
snippits/: GMW_header.cho  dtree.py  footer.py  header.py  procedure_return.py  procedure_signature.py
src/: Choreography.hs  Circuit.hs  GMW.hs  Python.hs  Utils.hs
src/Choreography/: AbstractSyntaxTree.hs  DecisionTree.hs  Functors.hs  Gen.hs  Metadata.hs  Parser.hs  Party.hs  Python.hs  Random.hs  Render.hs  Semantics.hs  Validate.hs
src/Polysemy/: Random.hs
tests/: TCircuits.hs  TPython.hs  TPython.hs.scratch  Tests.hs
