cabal-version:      2.4
name:               choreography
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
description: "See README.md"

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         33739499+ShapeOfMatter@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md
    snippits/*

common basic-config
    default-language: Haskell2010
    build-depends:    base >=4.14.3 && <5
                     ,bytestring
                     ,Cabal >= 3.6
                     ,cassava == 0.5.*
                     ,containers == 0.6.*
                     ,deepseq >=1.1 && <1.5
                     ,distributive >= 0.6.2 && ==0.6.*
                     ,optparse-applicative == 0.18.*
                     ,parsec >= 3.1 && == 3.*
                     ,polysemy >= 1.9 && <2
                     --,polysemy-zoo ^>= 0.8.0.0
                     ,process >=1.1.0.2 && <1.7
                     ,QuickCheck == 2.14.*
                     ,random == 1.2.1.* && <2
                     ,Stream >= 0.4.7.2 && ==0.4.*
                     ,template-haskell >= 2.16.0
                     ,time >= 1.10
                     ,tuple >= 0.3.0.2
                     ,vector >= 0.13
    ghc-options:
      -Wall
      -fprint-potential-instances
      -package=polysemy
      -package=polysemy-plugin
      -fplugin=Polysemy.Plugin
      -- I think it also needed `cabal install --lib polysemy-plugin`?
    default-extensions: AllowAmbiguousTypes
                       ,ApplicativeDo
                       ,BangPatterns
                       ,BlockArguments
                       ,ConstraintKinds
                       ,DataKinds
                       ,DeriveFunctor
                       ,DeriveGeneric
                       ,FlexibleContexts
                       ,FlexibleInstances
                       ,FunctionalDependencies
                       ,GADTs
                       ,GeneralizedNewtypeDeriving
                       ,LambdaCase
                       ,MultiParamTypeClasses
                       ,NamedFieldPuns
                       ,PolyKinds
                       ,QuantifiedConstraints
                       ,RankNTypes
                       ,ScopedTypeVariables
                       ,StandaloneDeriving
                       ,TemplateHaskell
                       ,TupleSections
                       ,TypeApplications
                       ,TypeOperators
                       ,TypeFamilies
                       ,UndecidableInstances

common lib-dependent
    import: basic-config
    build-depends: choreography

executable haskell-semantics
    import: lib-dependent
    main-is:          HsSemantics.hs
    ghc-options:
      -main-is HsSemantics
    hs-source-dirs:   app

executable d-tree-data
    import: lib-dependent
    main-is:          DTreeData.hs
    ghc-options:
      -main-is DTreeData
    hs-source-dirs:   app

executable random-cho
    import: lib-dependent
    main-is:          RandomCho.hs
    ghc-options:
      -main-is RandomCho
    hs-source-dirs:   app

executable meso-search
    import: lib-dependent
    main-is:          Search.hs
    ghc-options:
      -main-is Search
    hs-source-dirs:   app

executable experiment
    import: lib-dependent
    main-is:          Experiment.hs
    ghc-options:
      -main-is Experiment
    hs-source-dirs:   app

--executable python-semantics
--    import: lib-dependent
--    main-is:          PySemantics.hs
--    ghc-options:
--      -main-is PySemantics
--    hs-source-dirs:   app

library
    import: basic-config
    exposed-modules:
      Choreography
      Choreography.AbstractSyntaxTree
      Choreography.DecisionTree
      Choreography.Functors
      Choreography.Metadata
      Choreography.Parser
      Choreography.Party
      Choreography.Random
      Choreography.Render
      Choreography.Semantics
      Choreography.Validate
      Circuit
      Distribution.TestSuite.QuickCheck
      GMW
      Polysemy.Random
      Python
      Utils
    hs-source-dirs:   src

Test-Suite languageTests
    import: lib-dependent
    type:             detailed-0.9
    test-module:      Tests
    hs-source-dirs:   tests
    ghc-options:
      -Wno-incomplete-uni-patterns

Test-Suite circuitTests
    import: lib-dependent
    type:             detailed-0.9
    test-module:      TCircuits
    hs-source-dirs:   tests
    ghc-options:
      -Wno-incomplete-uni-patterns

Test-Suite pythonTests
    import: lib-dependent
    type:             detailed-0.9
    test-module:      TPython
    hs-source-dirs:   tests
    ghc-options:
      -Wno-incomplete-uni-patterns
